changes to run on azure aks

--- a/k8s/shoppingclient.yaml
+++ b/k8s/shoppingclient.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: shoppingclient
-          image: mehmetozkaya/shoppingclient:latest
+          image: tonyrucoba/akstutorial:shoppingclient
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 80
