--- a/aks/shoppingclient.yaml
+++ b/aks/shoppingclient.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: shoppingclient
-          image: shoppingacr.azurecr.io/shoppingclient:v2
+          image: acrtony.azurecr.io/shoppingclient:v1
           imagePullPolicy: IfNotPresent          
           ports:
             - containerPort: 80
