--- a/k8s/shoppingapi.yaml
+++ b/k8s/shoppingapi.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: shoppingapi
-          image: mehmetozkaya/shoppingapi:latest
+          image: tonyrucoba/akstutorial:shoppingapi
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 80
